# clang-learn

./: README.md  compile_commands.json
.cache/clangd/index/: checker.cc.EE85DB0207DA83A5.idx
ch0-Syntax/: compile_commands.json
ch0-Syntax/.cache/clangd/index/: checker.cc.EE85DB0207DA83A5.idx
ch0-Syntax/checker/: CMakeLists.txt  checker.cc
ch1/: max.cc  max.html
ch10-appendix/modulemaps/: README.md  header1.h  header1.pcm  header2.h  header2.pcm  main  main.cc  module.modulemap
ch10-appendix/pch/: Makefile  header.h  header.pch  main.cc
ch2-Visitors/: compile_commands.json  main.cc
ch2-Visitors/decl/: CMakeLists.txt  Consumer.hh  FrontendAction.hh  Visitor.hh  cleanup.sh  config.h  decl.cc
ch2-Visitors/decl/.cache/clangd/index/: decl.cc.CE0EF9A7987B16E6.idx
ch2-Visitors/match/: CMakeLists.txt  MatchCb.hh  MatchVisitor.cc  README.md  build.sh  max.cc
ch2-Visitors/match/.cache/clangd/index/: MatchCb.hh.265F64153C1882F5.idx  MatchVisitor.cc.9DF19C74B4D0B14F.idx
ch4-llvmLibs/: CMakeLists.txt  README.md  cast.hh  diags.hh  libs.cc  maps.hh  ptrs.hh  string.hh
ch4.5-class-checker/: CMakeLists.txt  README.md  build.sh  checker.cc  consumer.hh  plugin.hh  visitor.hh
ch4.5-class-checker/test/: lit.cfg.py  lit.site.cfg.py.in  test.cc
ch5-tidy/: CMakeLists.txt  ClasscheckerCheck.cpp  MiscTidyModule.cpp  README.md
ch5-tidy/tests/: classchecker.cpp
ch6-static-analysis/: CMakeLists.txt  CfgcomplexityCheck.cpp  CfgcomplexityCheck.h
ch7-refactor/: .clang-tidy  CMakeLists.txt  Consumer.hh  FrontendAction.hh  Rename.cc  Visitor.hh  build.sh
ch7-refactor/.cache/clangd/index/: Consumer.hh.B94290B5EEA4AE21.idx  Consumer.hh.BB28293A84AD1039.idx  FrontendAction.hh.1E227A0FE41A5133.idx  FrontendAction.hh.F07B42F2CBD7B779.idx  Rename.cc.E1C6EF21AE4E4463.idx  Rename.cc.E318A85758AB0AB8.idx  Visitor.hh.0D5024EFA52A193A.idx  Visitor.hh.32856E9704D035B8.idx
ch7-refactor/clang-tidy-tool/: MethodrenameCheck.cpp  MethodrenameCheck.h
ch7-refactor/test/: .clang-tidy  TestClass.cc
ch8-clangd/: clangd.sh
ch8-clangd/important-files/clangd/: ClangDMain.cc  README.md
